fixed modal alignment

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -67,7 +67,7 @@ button { cursor: pointer; color: #fff; padding: 4px 8px; font-size: 16px; border
 .checkbox-item { margin-bottom: 10px; }
 .pop_up_box { display: flex; flex-wrap: wrap; gap: 10px; }
 .bg-color { background: linear-gradient(to right,#cbe9f7ed,#f5dfdff2); }
-.checkbox__body { font-size: 15px; font-weight: 500; }
+.checkbox__body { font-size: 18px; font-weight: 500; }
 .checkbox.style-a { display: inline-block; position: relative; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .checkbox.style-a input { position: absolute; opacity: 0; cursor: pointer; height: 0; width: 0; }
 .checkbox.style-a input:checked ~ .checkbox__checkmark { background-color: #fff; }
@@ -76,11 +76,11 @@ button { cursor: pointer; color: #fff; padding: 4px 8px; font-size: 16px; border
 .checkbox.style-a .checkbox__checkmark:after { content: ""; position: absolute; left: 6px; top: 3px; width: 8px; height: 13px; border: solid #4ba410; border-width: 0 3px 3px 0; transform: rotate(45deg); opacity: 0; transition: opacity 0.25s ease; }
 .checkbox.style-a .checkbox__body { color: #333; line-height: 2.2; font-size: 18px; margin-left: 30px; }
 .checkbox-item input[type="checkbox"] { margin-right: 5px; }
-.checkbox_card { display: flex; align-items: center; justify-content: space-between; background: #ffffff63; border-radius: 10px; width: 100%;height: 45px;padding: 15px;}
-.check_price { font-size: 18px; }
-.checkbox_card_box{display:flex; justify-content: space-between;align-items: center;}
+.checkbox_card { display: flex; align-items: center; justify-content: space-between; background: #ffffff63; border-radius: 10px; width: 100%; height: 45px; padding: 15px; }
+.check_price { font-size: 18px; width: 120px; }
+.checkbox_card_box { display: flex; justify-content: space-between; align-items: center; }
 .total_price { color: #000; font-size: 18px; }
-form { text-align: center; font-size: 18px; width: 120px; }
+form { text-align: center; font-size: 18px; width: 98px; }
 .value-button { display: inline-block; border: 1px solid #e1a1a1; width: 35px; height: 35px; vertical-align: top; cursor: pointer; }
 form #decrease { margin-right: -8px; border-radius: 8px 0 0 8px; }
 form #increase { margin-left: -8px; border-radius: 0 8px 8px 0; }
@@ -291,14 +291,6 @@ div#box_4 { border-top-right-radius: 10px; border-bottom-right-radius: 10px; }
 .form_control label { position: absolute; top: 15px; left: 0; pointer-events: none; }
 .submit_now { color: rgb(255, 255, 255); font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol"; font-size: 19px; font-weight: 700; border: none; text-decoration-line: none; line-height: 22px; text-align: center; cursor: pointer; background-color: rgb(240 99 47); padding: 10px 20px; }
 .form_control { height: 232px; display: block; width: 85%; }
+.price_list { float: right; margin-top: 20px; background-color: #fff; padding: 60px; border-radius: 30px; box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0; }
 
-.price_list{
-
-    float: right;
-    margin-top: 20px;
-    background-color: white;
-    padding: 70px;
-    border-radius: 30px;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
 
